--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
   - "3.6"
 
 install:
-  - pip install -y pytest
-  - pip install -y numpy
+  - pip install pytest
+  - pip install numpy
 
 script:
   - py.test
